# rewind-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
apps/client/: CMakeLists.txt
apps/client/src/: client_systems.cc  client_systems.h  main.cc
apps/client/src/adapters/: raylib_adapter.cc  raylib_adapter.h
apps/server/: CMakeLists.txt
apps/server/src/: main.cc
cmake/: warnings.cmake
core/common/: CMakeLists.txt
core/demo_game/: CMakeLists.txt
core/demo_game/include/demo_game/: game_state.h
core/demo_game/src/: game_state.cc
core/net/include/net/: channel.h
core/replay/include/replay/: replay_store.h
core/replay/src/: replay_store.cc
core/sim/: CMakeLists.txt
core/sim/include/sim/: collision.h  scalar.h  shape.h  tick.h  vec2.h
core/sim/src/: collision.cc  scalar.cc  vec2.cc
libs/common/include/common/: log.h
libs/common/src/: log.cc
libs/demo_game/: CMakeLists.txt
libs/demo_game/include/demo_game/: game_mode.h  game_state.h
libs/demo_game/src/: game_mode.cc
libs/net/: CMakeLists.txt
libs/net/src/: channel.cc
libs/replay/: CMakeLists.txt
libs/sim/: CMakeLists.txt
libs/sim/include/sim/: scalar.h  vec2.h  world.h
libs/sim/src/: world.cc
tests/: CMakeLists.txt
tests/sim/: collision_test.cc
tests/smoke/: smoke_test.cc
